force-app/main/default/objects/Support_Ticket__c/fields/Auto_Close_On__c.field-meta.xml
<CustomField>
    <fullName>Auto_Close_On__c</fullName>
    <label>Auto Close On</label>
    <type>Date</type>
</CustomField>