force-app/main/default/objects/Support_Ticket__c/fields/Closure_Message__c.field-meta.xml
<CustomField>
    <fullName>Closure_Message__c</fullName>
    <label>Closure Message</label>
    <type>TextArea</type>
</CustomField>