force-app/main/default/objects/Support_Ticket__c/fields/Escalation_Level__c.field-meta.xml
<CustomField>
    <fullName>Escalation_Level__c</fullName>
    <label>Escalation Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>RM</fullName>
            </value>
            <value>
                <fullName>Sourcing Head</fullName>
            </value>
            <value>
                <fullName>HOSM</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>