force-app/main/default/objects/Support_Ticket__c/fields/Head_of_Sales_and_Marketing__c.field-meta.xml
<CustomField>
    <fullName>Head_of_Sales_and_Marketing__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Head of Sales and Marketing</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Support_Tickets2</relationshipName>
    <type>Lookup</type>
</CustomField>