force-app/main/default/objects/Support_Ticket__c/fields/Last_Escalated_On__c.field-meta.xml
<CustomField>
    <fullName>Last_Escalated_On__c</fullName>
    <label>Last Escalated On</label>
    <type>DateTime</type>
</CustomField>