force-app/main/default/objects/Support_Ticket__c/fields/Sourcing_RM__c.field-meta.xml
<CustomField>
    <fullName>Sourcing_RM__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sourcing RM</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Support_Tickets</relationshipName>
    <type>Lookup</type>
</CustomField>